[wenhao] modified useage message.